--- a/app/src/main/res/xml/opciones.xml
+++ b/app/src/main/res/xml/opciones.xml
@@ -24,6 +24,8 @@
             android:key="clave4"
             android:title="PREFERENCIA 4"
             android:summary="Descripcion de la preferencia 4"
-            android:dialogTitle="DIA PREFERENCIA"/>
+            android:dialogTitle="DIA PREFERENCIA"
+            android:entries="@array/multilista"
+            android:entryValues="@array/clavemultilista"/>
     </PreferenceCategory>
 </PreferenceScreen>
